fix footer overlap

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,3 +1,16 @@
 /* footer > div {
   background-color: rgb(153, 200, 223);
 } */
+
+footer {
+  font-size: 10px !important;
+}
+
+@media screen and (max-width: 768px) {
+  footer {
+    /* font-size: 10px !important; */
+    height: 50px !important;
+    margin-top: 30px;
+    padding-top: 20px;
+  }
+}
